--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "puppeteer": "^1.18.1",
     "stream-set": "^1.1.0",
     "tape": "^4.9.1",
-    "through2-parallel": "^0.1.3",
-    "tape": "*"
+    "through2-parallel": "^0.1.3"
   },
   "repository": {
     "type": "git",
